[package]
name = "nicodo"
version = "0.1.0"
authors = ["rot1024 <aayhrot@gmail.com>"]
description = "Niconico-doga Comment Downloader"
edition = "2018"

[[bin]]
name = "nicodo"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
lazy_static = "1.4.0"
quick-xml = "0.18.1"
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["json"] }
scraper = "0.12.0"
tokio = { version = "0.2.21", features = ["macros", "fs", "blocking"] }
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
chrono = "0.4.11"
dirs = "3.0.0"
thiserror = "1.0.20"
confy = "0.4.0"
derive_more = "0.99.9"
dialoguer = "0.6.2"
