[package]
name = "nicodo"
version = "0.1.0"
authors = ["rot1024 <aayhrot@gmail.com>"]
description = "Niconico-doga Comment Downloader"
edition = "2018"

[[bin]]
name = "nicodo"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
lazy_static = "1.4.0"
quick-xml = "0.22.0"
regex = "1.5.4"
reqwest = { version = "0.11.5", features = ["json"] }
scraper = "0.12.0"
tokio = { version = "1.12.0", features = ["fs", "macros", "rt-multi-thread"] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
dirs = "4.0.0"
thiserror = "1.0.30"
confy = "0.4.0"
derive_more = "0.99.16"
dialoguer = "0.8.0"
indicatif = "0.16.2"
